# coin-listener

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: package.yml
backend/: Cargo.toml
backend/crates/all-in-one/: Cargo.toml
backend/crates/all-in-one/src/: lib.rs  main.rs
backend/crates/api-server/: Cargo.toml
backend/crates/api-server/src/: auth.rs  lib.rs  main.rs  realtime.rs  routes.rs  trace.rs
backend/crates/chain-providers/: Cargo.toml
backend/crates/chain-providers/src/: btc.rs  evm.rs  lib.rs  tron.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: config.rs  error.rs  lib.rs  models.rs  proxy.rs
backend/crates/notifier/: Cargo.toml
backend/crates/notifier/src/: external.rs  lib.rs  main.rs  telegram_updates.rs
backend/crates/scheduler/: Cargo.toml
backend/crates/scheduler/src/: lib.rs  main.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/migrations/: 0001_init.sql  0002_config_management.sql  0003_events.sql  0004_scheduler_worker_scan.sql  0005_notifications.sql  0006_scan_cursors.sql  0007_notification_outbox.sql  0008_external_notification_deliveries.sql  0009_auth_session_baseline.sql  0009_notification_ops_indexes.sql  0010_service_heartbeats.sql  0011_provider_health.sql  0012_auth_session_baseline.sql  0013_watched_address_assets.sql  0014_telegram_bots_and_address_imports.sql  0015_telegram_channel_bindings.sql  0016_telegram_bot_username.sql  0017_telegram_proxy_settings.sql  0018_multi_chain_address_import_attempts.sql  0019_scan_runs.sql  0020_custody_accounts.sql  0021_custody_account_chain_configs.sql  0022_scan_jobs.sql
backend/crates/storage/src/: address_imports.rs  custody_accounts.rs  lib.rs  notifications.rs  notify_queue.rs  postgres.rs  provider_health.rs  redis.rs  repositories.rs  scan_jobs.rs  scan_queue.rs  scan_runs.rs  service_heartbeats.rs  system_status.rs  telegram_bindings.rs  telegram_settings.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: lib.rs  main.rs
docker/: all-in-one-entrypoint.sh  all-in-one.Dockerfile  backend.Dockerfile  nginx.conf
docs/superpowers/plans/: 2026-05-17-coin-listener-btc-tron-listeners.md  2026-05-17-coin-listener-evm-transfer-logs.md  2026-05-17-coin-listener-milestone-1-foundation.md  2026-05-17-coin-listener-milestone-2-config-management.md  2026-05-17-coin-listener-milestone-3-evm-events.md  2026-05-17-coin-listener-notification-system.md  2026-05-17-coin-listener-operations-status.md  2026-05-17-coin-listener-real-evm-rpc.md  2026-05-17-coin-listener-scheduler-worker.md  2026-05-18-coin-listener-btc-tron-pagination-reliability.md  2026-05-18-coin-listener-external-notification-channels.md  2026-05-18-coin-listener-notification-outbox-reliability.md  2026-05-19-coin-listener-all-in-one-packaging.md  2026-05-19-coin-listener-auth-session-hardening.md  2026-05-19-coin-listener-notification-operations.md  2026-05-19-coin-listener-provider-resilience.md  2026-05-19-coin-listener-realtime-in-app-notifications.md  2026-05-19-coin-listener-service-heartbeat.md  2026-05-21-blockchain-console-frontend-redesign.md  2026-05-21-coin-listener-watched-address-assets.md  2026-05-21-notification-address-import.md  2026-05-22-multi-provider-connectivity-test.md  2026-05-22-telegram-channel-binding.md  2026-05-22-telegram-proxy-light-theme-rpc-range.md  2026-05-23-evm-transaction-rescan-backfill.md  2026-05-23-multi-chain-address-import.md  2026-05-24-custody-account-mode.md  2026-05-24-custody-multi-chain-listening.md  2026-05-24-scan-audit-center.md
docs/superpowers/specs/: 2026-05-17-coin-listener-btc-tron-listeners-design.md  2026-05-17-coin-listener-design.md  2026-05-17-coin-listener-evm-transfer-logs-design.md  2026-05-17-coin-listener-notification-system-design.md  2026-05-17-coin-listener-operations-status-design.md  2026-05-17-coin-listener-real-evm-rpc-design.md  2026-05-17-coin-listener-scheduler-worker-design.md  2026-05-18-coin-listener-btc-tron-pagination-reliability-design.md  2026-05-18-coin-listener-external-notification-channels-design.md  2026-05-18-coin-listener-notification-outbox-reliability-design.md  2026-05-19-coin-listener-all-in-one-packaging-design.md  2026-05-19-coin-listener-auth-session-hardening-design.md  2026-05-19-coin-listener-notification-operations-design.md  2026-05-19-coin-listener-provider-resilience-design.md  2026-05-19-coin-listener-realtime-in-app-notifications-design.md  2026-05-19-coin-listener-service-heartbeat-design.md  2026-05-21-blockchain-console-frontend-redesign-design.md  2026-05-21-coin-listener-watched-address-assets-design.md  2026-05-21-notification-address-import-design.md  2026-05-22-multi-provider-connectivity-test-design.md  2026-05-22-telegram-channel-binding-design.md  2026-05-22-telegram-proxy-light-theme-rpc-range-design.md  2026-05-23-multi-chain-address-import-design.md  2026-05-24-custody-multi-chain-listening-design.md  2026-05-24-scan-audit-center-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  addressImport.ts  main.tsx  semi-layer.css  styles.css  tailwind.css  themeMode.ts  ui-regression.test.ts
frontend/src/api/: client.ts  health.ts  types.ts
frontend/src/auth/: session.ts
frontend/src/components/: AppShell.tsx  DataSurface.tsx  DataTable.tsx  FilterPanel.tsx  FormModal.tsx  MetricGrid.tsx  PageScaffold.tsx  TelegramBindingPanel.tsx  ThemeToggle.tsx
frontend/src/pages/: AddressesPage.tsx  AssetsPage.tsx  ChainsPage.tsx  CustodyAccountsPage.tsx  EventsPage.tsx  InAppNotificationsPage.tsx  LoginPage.tsx  NotificationChannelsPage.tsx  NotificationOperationsPage.tsx  NotificationRulesPage.tsx  ProvidersPage.tsx  ScanAuditPage.tsx  SystemStatusPage.tsx  TelegramBotsPage.tsx
frontend/src/realtime/: notifications.ts
