[package]
name = "all-in-one"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
api-server = { path = "../api-server" }
axum.workspace = true
chrono.workspace = true
coin-listener-core = { path = "../core" }
coin-listener-storage = { path = "../storage" }
notifier = { path = "../notifier" }
redis.workspace = true
reqwest.workspace = true
scheduler = { path = "../scheduler" }
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
worker = { path = "../worker" }
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
