[package]
name = "api-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
coin-listener-chain-providers = { path = "../chain-providers" }
coin-listener-core = { path = "../core" }
coin-listener-storage = { path = "../storage" }
axum.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
