[package]
name = "coin-listener-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
