[package]
name = "scheduler"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
coin-listener-core = { path = "../core" }
coin-listener-storage = { path = "../storage" }
redis.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
